Bug 341902: Bookmarks-> "Subscribe to this page..." is not aligned properly with "Bookmark This Page..." and "Bookmark All Tabs...", patch by Mark Pilgrim <pilgrim@gmail.com>, r=mano
UltraBlame original commit: 73ac8aa06cd6b4ad5dd03c6c3327dd3d1574866b

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -175,7 +175,9 @@ menuitem.bookmark-item {
 
 
 #bookmarksMenuPopup > menuitem > .menu-text,
-menupopup[type="places"] > menuitem > .menu-text { 
+#bookmarksMenuPopup > menu > .menu-text,
+menupopup[type="places"] > menuitem > .menu-text,
+menupopup[type="places"] > menu > .menu-text { 
   
 
 
